--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "notes-fullstack-app-ex-04",
   "version": "1.0.0",
+  "type": "module",
   "description": "Notes app with nest.js framework",
   "main": "./backend/src/main.tx",
   "scripts": {
